
5.31  2014-08-18

5.30  2014-08-17
  - Improved Mojolicious::Static to only handle GET and HEAD requests.
  - Improved Mojo::URL performance.
  - Improved url_for performance slightly.
  - Fixed bug where DATA sections sometimes got corrupted after forking, which
    caused applications to fail randomly.
  - Fixed Mojo::IOLoop::Client to use a timeout for every connection.

5.29  2014-08-16
  - Added helpers method to Mojolicious::Controller.
  - Improved performance of .ep templates slightly.
  - Fixed "0" value bug in Mojolicious::Plugin::EPRenderer.

5.28  2014-08-13
  - Improved performance of nested helpers and helpers in templates
    significantly.
  - Improved Mojo::JSON to generate smaller JSON by not escaping the "/"
    character.

5.27  2014-08-11
  - Added support for nested helpers.
  - Added get_helper method to Mojolicious::Renderer.
  - Added n function to ojo.
  - Fixed bug in Mojolicious::Routes::Match where placeholder values got
    merged too early.

5.26  2014-08-09
  - Improved WebSocket performance.
  - Fixed proxy exception handling bug in Mojo::UserAgent.
  - Fixed bug where Mojo::Transaction::WebSocket would build incorrect frames
    if the FIN bit was not set.

5.25  2014-08-07
  - Added reduce method to Mojo::Collection. (sri, batman)
  - Added if_none_match method to Mojo::Headers.
  - Added is_fresh method to Mojolicious::Static.
  - Added is_fresh helper to Mojolicious::Plugin::DefaultHelpers.
  - Improved Mojolicious to use MyApp::Controller namespace by default and
    encourage its use in the documentation.
  - Improved sort method in Mojo::Collection to use $a and $b. (batman)
  - Improved Mojolicious::Static to support ETag and If-None-Match headers.
  - Improved documentation browser CSS.
  - Fixed escaping bugs in Mojo::DOM::CSS.

5.24  2014-08-02
  - Improved url_escape performance slightly.
  - Fixed memory leak in Mojo::IOLoop::Client.
  - Fixed bug where ojo would sometimes die silently.

5.23  2014-07-31