@@ -1,5 +1,6 @@
 
 5.31  2014-08-18
+  - Improved Mojolicious::Static to allow custom content types.
 
 5.30  2014-08-17
   - Improved Mojolicious::Static to only handle GET and HEAD requests.
